// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Switch Augmented Width Switch Toggle 1`] = `
.c0 {
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c4 {
  padding-left: 4px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #336BFF;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c1 {
  display: inline-block;
}

.c9 {
  background: white;
  display: block;
  height: 24px;
  width: 100px;
  position: absolute;
  top: 50%;
  left: 0;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  background-color: #FFFFFF;
  margin-left: 3px;
}

.c13 {
  display: block;
  height: 28px;
  width: 192px;
  margin: -2px 0;
  border-radius: 14px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  line-height: 24px;
  background-color: #EBEBE8;
  border: 1px solid #EBEBE8;
}

.c7 {
  position: relative;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6[aria-checked='true'] .c8 {
  -webkit-transform: translate( 88px );
  -ms-transform: translate( 88px );
  transform: translate( 88px );
}

.c6[disabled] .c12,
.c6[aria-readonly] .c12 {
  background-color: #EBEBE8;
}

.c6[disabled] .c8,
.c6[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c6[aria-checked='true'][aria-readonly] .c12 {
  background-color: rgba(0,70,255,0.1);
}

.c16 {
  padding-top: 2px;
  width: 100px;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <span
            className="c5"
          >
            Swedish
             is active | 
          </span>
        </div>
      </span>
      <span
        className="c3"
      >
        <button
          aria-checked={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c6"
          knobWidth={25}
          onClick={[Function]}
          role="switch"
          trackWidth={48}
          type="button"
        >
          <div
            className="c7"
          >
            <span
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11"
                >
                  Swedish
                </span>
              </div>
            </span>
            <span
              className="c12 c13"
            >
              <div
                className="c14"
              >
                <span
                  className="c15 c16"
                >
                  Swedish
                </span>
                <span
                  className="c15 c16"
                >
                  Finnish
                </span>
              </div>
            </span>
          </div>
        </button>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Switch Controlled behaviour 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: inline-block;
}

.c7 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BDBDBD;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c9 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BDBDBD;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c5 {
  position: relative;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4[aria-checked='true'] .c8 {
  background-color: #336BFF;
}

.c4[aria-checked='true'] .c6 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c4[disabled] .c8,
.c4[aria-readonly] .c8 {
  background-color: #EBEBE8;
}

.c4[disabled] .c6,
.c4[aria-readonly] .c6 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c4[aria-checked='true'][aria-readonly] .c8 {
  background-color: rgba(0,70,255,0.1);
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="c2"
    >
      <button
        aria-checked={true}
        className="NormalizedButton__Button-sc-ey7f5x-0 c4"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="c5"
        >
          <span
            className="c6 c7"
          />
          <span
            className="c8 c9"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules / Switch Default  Switch Toggle 1`] = `
.c0 {
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c4 {
  padding-left: 4px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #336BFF;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c1 {
  display: inline-block;
}

.c9 {
  background: white;
  display: block;
  height: 24px;
  width: 48px;
  position: absolute;
  top: 50%;
  left: 0;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  background-color: #FFFFFF;
  margin-left: 3px;
}

.c13 {
  display: block;
  height: 28px;
  width: 92px;
  margin: -2px 0;
  border-radius: 14px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  line-height: 24px;
  background-color: #EBEBE8;
  border: 1px solid #EBEBE8;
}

.c7 {
  position: relative;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6[aria-checked='true'] .c8 {
  -webkit-transform: translate( 40px );
  -ms-transform: translate( 40px );
  transform: translate( 40px );
}

.c6[disabled] .c12,
.c6[aria-readonly] .c12 {
  background-color: #EBEBE8;
}

.c6[disabled] .c8,
.c6[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c6[aria-checked='true'][aria-readonly] .c12 {
  background-color: rgba(0,70,255,0.1);
}

.c16 {
  padding-top: 2px;
  width: 48px;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <span
            className="c5"
          >
            SEK
             is active | 
          </span>
        </div>
      </span>
      <span
        className="c3"
      >
        <button
          aria-checked={false}
          className="NormalizedButton__Button-sc-ey7f5x-0 c6"
          onClick={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="c7"
          >
            <span
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11"
                >
                  SEK
                </span>
              </div>
            </span>
            <span
              className="c12 c13"
            >
              <div
                className="c14"
              >
                <span
                  className="c15 c16"
                >
                  SEK
                </span>
                <span
                  className="c15 c16"
                >
                  %
                </span>
              </div>
            </span>
          </div>
        </button>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Switch Default Off 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: inline-block;
}

.c7 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BDBDBD;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c9 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BDBDBD;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c5 {
  position: relative;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4[aria-checked='true'] .c8 {
  background-color: #336BFF;
}

.c4[aria-checked='true'] .c6 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c4[disabled] .c8,
.c4[aria-readonly] .c8 {
  background-color: #EBEBE8;
}

.c4[disabled] .c6,
.c4[aria-readonly] .c6 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c4[aria-checked='true'][aria-readonly] .c8 {
  background-color: rgba(0,70,255,0.1);
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="c2"
    >
      <button
        aria-checked={false}
        className="NormalizedButton__Button-sc-ey7f5x-0 c4"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="c5"
        >
          <span
            className="c6 c7"
          />
          <span
            className="c8 c9"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules / Switch Default On 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: inline-block;
}

.c7 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BDBDBD;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c9 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BDBDBD;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c5 {
  position: relative;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4[aria-checked='true'] .c8 {
  background-color: #336BFF;
}

.c4[aria-checked='true'] .c6 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c4[disabled] .c8,
.c4[aria-readonly] .c8 {
  background-color: #EBEBE8;
}

.c4[disabled] .c6,
.c4[aria-readonly] .c6 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c4[aria-checked='true'][aria-readonly] .c8 {
  background-color: rgba(0,70,255,0.1);
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="c2"
    >
      <button
        aria-checked={true}
        className="NormalizedButton__Button-sc-ey7f5x-0 c4"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="c5"
        >
          <span
            className="c6 c7"
          />
          <span
            className="c8 c9"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules / Switch Disabled 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: inline-block;
}

.c7 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BDBDBD;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c9 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BDBDBD;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c5 {
  position: relative;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4[aria-checked='true'] .c8 {
  background-color: #336BFF;
}

.c4[aria-checked='true'] .c6 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c4[disabled] .c8,
.c4[aria-readonly] .c8 {
  background-color: #EBEBE8;
}

.c4[disabled] .c6,
.c4[aria-readonly] .c6 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c4[aria-checked='true'][aria-readonly] .c8 {
  background-color: rgba(0,70,255,0.1);
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="c2"
    >
      <button
        aria-checked={false}
        className="NormalizedButton__Button-sc-ey7f5x-0 c4"
        disabled={true}
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="c5"
        >
          <span
            className="c6 c7"
          />
          <span
            className="c8 c9"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules / Switch Read Only 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c5 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  display: inline-block;
}

.c11 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BDBDBD;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c13 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BDBDBD;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c9 {
  position: relative;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8[aria-checked='true'] .c12 {
  background-color: #336BFF;
}

.c8[aria-checked='true'] .c10 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c8[disabled] .c12,
.c8[aria-readonly] .c12 {
  background-color: #EBEBE8;
}

.c8[disabled] .c10,
.c8[aria-readonly] .c10 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c8[aria-checked='true'][aria-readonly] .c12 {
  background-color: rgba(0,70,255,0.1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Off
      </span>
    </div>
    <div>
      <label
        className="c4"
      >
        <span
          className="c5"
        >
          <span
            className="c6"
          >
            <span
              className="c7"
            >
              Necessary cookies
            </span>
          </span>
          <span
            className="c6"
          >
            <button
              aria-checked={false}
              aria-readonly={true}
              className="NormalizedButton__Button-sc-ey7f5x-0 c8"
              onClick={[Function]}
              role="switch"
              type="button"
            >
              <div
                className="c9"
              >
                <span
                  className="c10 c11"
                />
                <span
                  className="c12 c13"
                />
              </div>
            </button>
          </span>
        </span>
      </label>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        On
      </span>
    </div>
    <div>
      <label
        className="c4"
      >
        <span
          className="c5"
        >
          <span
            className="c6"
          >
            <span
              className="c7"
            >
              Necessary cookies
            </span>
          </span>
          <span
            className="c6"
          >
            <button
              aria-checked={true}
              aria-readonly={true}
              className="NormalizedButton__Button-sc-ey7f5x-0 c8"
              onClick={[Function]}
              role="switch"
              type="button"
            >
              <div
                className="c9"
              >
                <span
                  className="c10 c11"
                />
                <span
                  className="c12 c13"
                />
              </div>
            </button>
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Switch With Label prop as ReactNode 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  display: inline-block;
}

.c7 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BDBDBD;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c9 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BDBDBD;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c5 {
  position: relative;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4[aria-checked='true'] .c8 {
  background-color: #336BFF;
}

.c4[aria-checked='true'] .c6 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c4[disabled] .c8,
.c4[aria-readonly] .c8 {
  background-color: #EBEBE8;
}

.c4[disabled] .c6,
.c4[aria-readonly] .c6 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c4[aria-checked='true'][aria-readonly] .c8 {
  background-color: rgba(0,70,255,0.1);
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="c2"
    >
      <button
        aria-checked={false}
        className="NormalizedButton__Button-sc-ey7f5x-0 c4"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="c5"
        >
          <span
            className="c6 c7"
          />
          <span
            className="c8 c9"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules / Switch With hidden label 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: inline-block;
}

.c8 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BDBDBD;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c10 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BDBDBD;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c6 {
  position: relative;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5[aria-checked='true'] .c9 {
  background-color: #336BFF;
}

.c5[aria-checked='true'] .c7 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c5[disabled] .c9,
.c5[aria-readonly] .c9 {
  background-color: #EBEBE8;
}

.c5[disabled] .c7,
.c5[aria-readonly] .c7 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c5[aria-checked='true'][aria-readonly] .c9 {
  background-color: rgba(0,70,255,0.1);
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          className="c4"
        >
          Notify me by email
        </span>
      </div>
    </span>
    <span
      className="c2"
    >
      <button
        aria-checked={false}
        className="NormalizedButton__Button-sc-ey7f5x-0 c5"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="c6"
        >
          <span
            className="c7 c8"
          />
          <span
            className="c9 c10"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;
